--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon.jpg">
+  <meta name="description" content="Personal Resume">
+  <meta name="author" content="862336640">
 
-  <title>John Doe - Business Administration</title>
+  <title>Megan Nakajima - Business Statistics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Megan Nakajima</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/megannakajima.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Megan Nakajima
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">My name is Megan Nakajima and I am a first year student at the University of California, Riverside. I am currently majoring in the School of Business, studying Actuarial Science.  <br><br>
 
-        Enter bio here<br><br>
+        This is my second year being a math instructor at a math learning center called Mathnasium. There, I work with students, ages 4-18, in understanding numbers. Unlike tutoring centers, Mathnasium does not focus on helping the students with their homework, assuming that the students do not have a strong fundamental understanding of the necessary mathematical concepts. Instead, each student is evaluated in order for us to design a personalized binder for them. In their binder, are pages of several concepts that the student failed to test well in. These concepts may be years behind their current grade level. Working on these pages will help the student strengthen their fundamental skills in order to perform better in the more advanced topics at school. As an instructor, I work with four students each hour, guiding them through their binder work, while keeping them engaged. Personally, I create the strongest bonds with the female students ages four to ten. The parents of several students have reached out to me, asking for me to work with their child in other subjects outside of Mathnasium. This shows the importance of forming relationships with each student when working with them. Ever since, I have been working with students as a separate part-time job, tutoring them in reading and writing.<br><br>
 
-        Enter bio here
+        Between years of education, my ongoing time at Mathnasium, and my work as a private tutor, I have strengthened several skills within my personal being. Perhaps most notably, my communication skills are stronger than ever. I do believe that in every career, communication is one of the most important skills whether it be face-to-face communication or electronic. My different experiences have allowed for me to grow in my communication with individuals of all ages. Another prominent trait is organization. Between organizing lesson plans for private tutoring or keeping the work of over one hundred students organized at Mathnasium, I have become extremely capable of organizing almost anything in an efficient and timely manner. While these skills are important, I also think that the fashion in which they are done is underappreciated. I pride myself in my enthusiastic manner and optimistic outlook. Especially when working in a chaotic environment, it is easy for stress to get the better of you. In my many months at Mathnasium, I think I have come close to perfecting my calm mindset when entering a state of work. There is nothing more anxiety-inducing than a workplace filled with energetic children, but that environment alone has trained my mind how to handle unexpected changes in a calm and organized fashion.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.youtube.com/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/megannakajima">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.amazon.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:mnaka055@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,43 +92,42 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Math Instructor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mathnasium.com">Mathnasium</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Work with students ages 4-18<br> 
+              • Organize personalized work for each student<br>
+              • Communicate progress with parents<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">September 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Private Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://fakewebsite.com/">Alhambra, CA</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Organize personalized lesson plans weekly<br>
+              • Work alongside individual students<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2023 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://clubtwentyone.org/">Club 21 - Pasadena, CA</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Took lessons to learn about Down Syndrome<br>
+            • Socialize with individuals of all ages with Down Sydrome<br>
+            • Communicate with families of individuals with Down Syndrome<br>
 
           </p>
           </div>
@@ -152,33 +151,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Business</div>
+            <div>BS in Actuarial Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2022 - May 2026</span>
           </div>
         </div>
 
@@ -191,7 +168,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.png" width="500px">
+            <img src="img/image2.png" width="500px"><br>
+            <img src="img/image3.png" width="500px">
+            <img src="img/image4.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +179,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Megan Nakajima</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
